Refactor removal of accents for Thing ID normalization (#17698)
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>